tests/diagnostics/expressions/struct_literals/missing_field/expect.txt
# exit: 1
input/main.coppice:4:10: error: missing field 'y' in Point literal
      p := Point { x: 1 }
           ^
